# luicote

./: .gitignore  LICENSE  Readme.md  luicote  main.py  pyproject.toml
haskell_template/: _typos.toml  flake.nix  folder_name.cabal  treefmt.nix
luicote.egg-info/: SOURCES.txt  entry_points.txt
src/luicote/: main.py
src/luicote.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
template/: CHANGELOG.md  LICENSE  README.md  folder_name.cabal
